syntax = "proto2";

package test_enum_values;

enum TestEnumValuesEnum {
    UNKNOWN = 0;
    WINTER = 11;
    SPRING = 22;
    SUMMER = 33;
    AUTUMN = 44;
}
